--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -152,3 +152,10 @@ footer {
   color: #ffffff;
 }
 
+@media (max-width: 1199px) {
+  nav{
+    width: 100%;
+    padding: 0 24px;
+    align-items: center;
+  }
+}
