--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -15,13 +15,14 @@ nav {
 .signin {
   width: 128px;
   height: 48px;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 16px;
   border-radius: 8px;
 }
 
 header {
   width: 100%;
+  height: 540px;
   background-color: var(--skyblue);
   display: flex;
   justify-content: center;
@@ -29,12 +30,17 @@ header {
   margin-top: 70px;
 }
 
+.header-img {
+  margin-top: auto;
+  margin-bottom: 0;
+}
+
 .header-button {
   width: 355px;
   height: 56px;
   font-size: 20px;
   border-radius: 40px;
-  font-weight: 500;
+  font-weight: 700;
 }
 
 .signin, .header-button {
@@ -53,6 +59,7 @@ h1 {
   font-weight: 700;
   font-size: 40px;
   margin: 0;
+  width: 300px;
 }
 
 .keyword {
@@ -114,6 +121,11 @@ left: 40px;
 align-items: center;
 }
 
+.content {
+  margin-top: auto;
+  margin-bottom: 0;
+}
+
 footer {
   background-color: var(--gray900);
   height: 160px;
@@ -152,10 +164,50 @@ footer {
   color: #ffffff;
 }
 
+@media (max-width: 1370px) {
+  header {
+    height: 771px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .header-slogan {
+    margin-top: 84px;
+    align-items: center;
+  }
+
+  h1 {
+    width: 100%;
+  }
+
+}
+
 @media (max-width: 1199px) {
-  nav{
+  nav {
     width: 100%;
     padding: 0 24px;
     align-items: center;
+  }
+
+  section {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .top-items {
+    order: 2;
+  }
+
+  .top-container img {
+    order: 1;
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .bottom-container {
+    height: auto;
   }
 }
