--- a/CSS/signin-style.css
+++ b/CSS/signin-style.css
@@ -99,3 +99,14 @@ input::placeholder {
   font-weight: 500;
 }
 
+@media (max-width: 767px) {
+  body {
+    width: auto;
+    margin: 60px 16px;
+  }
+
+  body > * {
+    max-width: 400px;
+    margin: auto;
+  }
+}
