--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -59,7 +59,6 @@ h1 {
   font-weight: 700;
   font-size: 40px;
   margin: 0;
-  width: 300px;
 }
 
 .keyword {
@@ -176,10 +175,6 @@ footer {
     align-items: center;
   }
 
-  h1 {
-    width: 100%;
-  }
-
   .content {
     width: 100%;
     display: flex;
@@ -204,6 +199,10 @@ footer {
     width: 100%;
   }
 
+  .txt br, .header-slogan br {
+    display: none;
+  }  
+
   section {
     display: flex;
     flex-direction: column;
@@ -223,5 +222,9 @@ footer {
 @media (max-width: 767px) {
   nav {
     padding: 0 16px;
+  }
+
+  .header-slogan br {
+    display: inline;
   }
 }
