feat: bottom container 타블렛 사이즈 높이 설정

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -219,13 +219,17 @@ footer {
   .top-container img {
     order: 1;
   }
+
+  .bottom-container {
+    height: 927px;
+  }
 }
 
 @media (max-width: 767px) {
   nav {
     padding: 0 16px;
   }
-
+ 
   .header-slogan br {
     display: inline;
   }
