feat: 사이즈 조정 시 이미지가 튀어나오지 않도록 조정

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -29,6 +29,7 @@ header {
   justify-content: center;
   align-items: center;
   margin-top: 70px;
+  overflow: hidden;
 }
 
 .header-img {
@@ -187,6 +188,7 @@ footer {
     height: auto;
     margin: 0;
     z-index: 0;
+    overflow: hidden;
   }
 }
 
