--- a/CSS/home.css
+++ b/CSS/home.css
@@ -182,7 +182,23 @@ footer {
   color: #ffffff;
 }
 
-@media (max-width: 1370px) {
+/* @media (max-width: 1370px) {
+
+
+
+
+  .bottom-container {
+
+  }
+} */
+
+@media (max-width: 1199px) {
+  nav {
+    width: 100%;
+    padding: 0 24px;
+    align-items: center;
+  }
+  
   header {
     height: 771px;
     display: flex;
@@ -193,29 +209,7 @@ footer {
     margin-top: 84px;
     align-items: center;
   }
-
-  .content {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-  }
-
-  .bottom-container {
-    height: auto;
-    margin: 0;
-    z-index: 0;
-    overflow: hidden;
-  }
-}
-
-@media (max-width: 1199px) {
-  nav {
-    width: 100%;
-    padding: 0 24px;
-    align-items: center;
-  }
-
+  
   main {
     width: 100%;
     overflow: hidden;
@@ -240,8 +234,19 @@ footer {
     order: 1;
   }
 
+  .content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+
   .bottom-container {
     height: 927px;
+    height: auto;
+    margin: 0;
+    z-index: 0;
+    overflow: hidden;
   }
 }
 
