feat: 빈 input 빨강색 테두리 설정

--- a/CSS/signin-style.css
+++ b/CSS/signin-style.css
@@ -39,6 +39,10 @@ input:focus {
   outline:2px solid var(--blue);
 }
 
+.markInput {
+  outline:1px solid var(--red);
+}
+
 input::placeholder {
   color: var(--gray400)
 }
