--- a/components/CommentSection.module.css
+++ b/components/CommentSection.module.css
@@ -190,6 +190,22 @@
   color: #9ca3af;
 }
 
+.commentEmptyMessage {
+  text-align: center;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #9ca3af;
+}
+
+.commentEmptyWrapper {
+  width: 696px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .commentInputButtonEnabled {
   background-color: #3692ff;
 }
