--- a/components/UI/SearchBar.module.css
+++ b/components/UI/SearchBar.module.css
@@ -5,7 +5,7 @@
   border-style: none;
   border-radius: 8px;
   background-color: #f3f4f6;
-  background-image: url(../public/images/icSearch.svg);
+  background-image: url(../../public/images/icSearch.svg);
   background-repeat: no-repeat;
   background-size: 24px 24px;
   background-position: 16px center;
