feat: accessToken이 있는 경우 navbar 로그인 버튼 UI 변경

--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -30,6 +30,9 @@
 }
 
 .loginButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 128px;
   height: 48px;
   font-weight: 600;
@@ -38,6 +41,8 @@
   color: #ffffff;
   border-style: none;
   background-color: #3692ff;
+  text-decoration: none;
+  text-align: center;
 }
 
 .profileButton {
