feat: 게시글 상세 페이지 반영되지 않은 반응형 디자인 적용

--- a/components/addboard/CommentSection.module.css
+++ b/components/addboard/CommentSection.module.css
@@ -231,7 +231,8 @@
   .commentWrapper,
   .articleInfoTopItems,
   .commentSection,
-  .commenTextArea {
+  .commenTextArea,
+  .articleSectionItems {
     width: 343px;
   }
 }
